RESOLVED FIXED15678
[Transforms] Popup menus don't come up transformed
https://bugs.webkit.org/show_bug.cgi?id=15678
Summary [Transforms] Popup menus don't come up transformed
Dave Hyatt
Reported 2007-10-24 13:28:07 PDT
Probably really hard to fix, but a rotated <select> doesn't bring up a rotated menu. The menu that comes up is positioned incorrectly. We should at least work properly with translate and scale.
Attachments
Testcase (550 bytes, text/html)
2008-11-06 17:05 PST, Simon Fraser (smfr)
no flags
Patch, changelog. (1.47 KB, patch)
2008-11-06 17:07 PST, Simon Fraser (smfr)
koivisto: review+
Simon Fraser (smfr)
Comment 1 2008-10-24 14:30:41 PDT
*** Bug 20773 has been marked as a duplicate of this bug. ***
Simon Fraser (smfr)
Comment 2 2008-10-27 14:10:10 PDT
RenderMenuList::showPopup() uses absoluteBoundingBoxRect() to position the popup, which ignores transforms.
Simon Fraser (smfr)
Comment 3 2008-11-06 17:05:15 PST
Created attachment 24958 [details] Testcase
Simon Fraser (smfr)
Comment 4 2008-11-06 17:07:01 PST
Created attachment 24959 [details] Patch, changelog.
Simon Fraser (smfr)
Comment 5 2008-11-06 17:12:01 PST
The patch at least places the popup menu in the right location. It does not apply the transform to the dropdown; that would be much harder, and not always desirable I think. Committed r38208 M WebCore/rendering/RenderMenuList.cpp M WebCore/ChangeLog r38208 = a80e3173df2d098f976640e36db49f0f4da1e560 (trunk)
Note You need to log in before you can comment on or make changes to this bug.