2008-11-06  Simon Fraser  <simon.fraser@apple.com>

Reviewed by Antti Koivisto

        https://bugs.webkit.org/show_bug.cgi?id=15678

        Fix transformed menu selects to show the popup in the correct
        location.

        * rendering/RenderMenuList.cpp:
        (WebCore::RenderMenuList::showPopup):

Canonical link: https://commits.webkit.org/30426@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@38208 268f45cc-cd09-0410-ab3c-d52691b4dbfc