WebCore/rendering/RenderMenuList.cpp
@@ -275,7 +275,13 @@ void RenderMenuList::showPopup()
         m_popup = PopupMenu::create(this);
     HTMLSelectElement* select = static_cast<HTMLSelectElement*>(node());
     m_popupIsVisible = true;
-    m_popup->show(absoluteBoundingBoxRect(), document()->view(),
+
+    // Compute the top left taking transforms into account, but use
+    // the actual width of the element to size the popup.
+    FloatPoint absTopLeft = localToAbsolute(FloatPoint(), false, true);
+    IntRect absBounds = absoluteBoundingBoxRect();
+    absBounds.setLocation(roundedIntPoint(absTopLeft));
+    m_popup->show(absBounds, document()->view(),
         select->optionToListIndex(select->selectedIndex()));
 }
 
